# CG

./: Box.cpp  Box.h  CMakeCache.txt  Cone.cpp  Cone.h  Makefile  Plane.cpp  Plane.h  Plane.h.gch  Sphere.cpp  Sphere.h  class2  cmake_install.cmake  coneAlmost.cpp  engine  ex2.xml  generator  main.cpp  sphere.cpp
Engine/: Box.cpp  CMakeCache.txt  Cone.cpp  Makefile  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  SphereTESTE.3d  class2  cmake_install.cmake  coneAlmost.cpp  main.cpp
Fase 1/: CMakeCache.txt  CMakeLists.txt  Makefile  engine  ex.xml
Fase 1/files3d/: Esfera.3d
Fase 1/headers/: Figure.h
Fase 1/notSure/: input.xml  main.cpp
Fase1/headers/: Cone.h  Figure.h  Plane.h  Vertex.h
Fase1/src/: Box.cpp  Figure.cpp  generator.cpp
Fase2/: CMakeCache.txt  CMakeLists.txt  Makefile  Rotation.cpp  Scale.cpp  Scale.h  Transformation.h  Translation.cpp  cmake_install.cmake  engine  ex.xml  sistemasolar.xml  sph.3d  sphere.3d  torus.3d
Fase2/headers/: App.h  Color.h  Figure.h  Rotation.h  SSystem.h  Scale.h  Translation.h
Fase2/src/: App.cpp  Color.cpp  Figure.cpp  Rotation.cpp  Transformation.cpp  Translation.cpp  main.cpp
Fase3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cometa.3d  engine  generator  saturn.3d  sistemasolar.xml  solar_system_dynamic.xml  teste.xml  tsave.h
Fase3/headers/: App.h  Bezier.h  Box.h  Color.h  Figure.h  Group.h  Rotation.h  Sphere.h  Transformation.h  Translation.h  VBO.h  Vertex.h  group.h
Fase3/src/: Bezier.cpp  Figure.cpp  Group.cpp  Rotation.cpp  Transformation.cpp  Translation.cpp  VBO.cpp  Vertex.cpp  generator.cpp  group.cpp  main.cpp
Fase4/: CMakeLists.txt  main.cpp  sistemasolar.xml  spherenew.3d  spherenew.3dn  spherenew.3dt
Fase4/headers/: Figure.h  Group.h  Light.h  Scale.h  Texture.h  Transformation.h  VBO.h  (+1 more)
files3d/: PlaneTESTEEE.3d
headers/: Box.h  Cone.h  Figure.h  Plane.h  Sphere.h  Vertex.h
notSure/: box2.cpp
src/: Box.cpp  Cone.cpp  Figure.cpp  Plane.cpp  Sphere.cpp  Vertex.cpp  generator.cpp  main.cpp
(+22 files in other folders)
